--- a/FirstBlazor_App/Client/Pages/ContactList.razor
+++ b/FirstBlazor_App/Client/Pages/ContactList.razor
@@ -35,8 +35,8 @@
                         <td>@contact.LastName</td>
                         <td>@contact.Phone</td>
                         <td>@contact.Address</td>
-                        <td></td>
-                        <td></td>
+                    <td><a href="/contactdetails/@contact.Id"><i>Edit</i></a></td>
+                    <td><a href="/contactdelete/@contact.Id"><i>Delete</i></a></td>
                     </tr>
                     
                 }
